@@ -10,7 +10,7 @@ from zope.interface import implements
 
 # Define and compile static regexes
 FILENAME_REGEX = re.compile(r"^(.+)\.(\w{,4})$")
-IGNORE_REGEX = re.compile(r"[']")
+IGNORE_REGEX = re.compile(r"['\"]")
 NON_WORD_REGEX = re.compile(r"[\W\-]+")
 DANGEROUS_CHARS_REGEX = re.compile(r"[!#$%&()*+,/:;<=>?@\\^_{|}\[\]~]+")
 MULTIPLE_DASHES_REGEX = re.compile(r"\-+")
